docs(release-notes): Adding Features and Breaking Change for CDSH 2.36.0